done; todo refactor

--- a/index.html
+++ b/index.html
@@ -3,8 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
+    <script defer src="app.js"></script>
     <title>Interior Consultant</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <nav class="header-elements">
+        <div class="title">
+          <h4>This Interior</h4>
+        </div>
+        <div class="hamburger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+        <ul class="nav-links">
+          <li><a href="Home">Home</a></li>
+          <li><a href="Collection">Collection</a></li>
+          <li><a href="About">About</a></li>
+          <li><a href="Contact">Contact</a></li>
+        </ul>
+      </nav>
+
+      <div class="content">
+        <div class="content-header">
+          <h1>Modern Interior</h1>
+          <p>
+            A full-Service residential & commercial interior design and staging
+            company offering professional organizing & eco-services
+          </p>
+          <div class="read-more">
+            <p>
+              Read more
+            </p>
+            <span class="material-icons">
+              arrow_right_alt
+            </span>
+          </div>
+        </div>
+
+        <div class="content-design">
+          <div class="img-design">
+            <img src="./photo1.png" alt="interior design" />
+          </div>
+          <div class="designer">
+            <div class="block-1">
+              <div class="img-avatar">
+                <img src="./photo2.png" alt="avatar aliza webber" />
+              </div>
+              <div class="designer-title">
+                <h2>Aliza Webber</h2>
+                <p>Interior Designer</p>
+              </div>
+            </div>
+            <h3>Designed in 2020 by Aliza Webber</h3>
+          </div>
+        </div>
+      </div>
+      <footer>Jaka Daneu @ DevChallenges.io</footer>
+    </div>
+  </body>
 </html>
